docs/pages/versions/v57.0.0/sdk/ui/swift-ui/colorpicker.mdx
---
title: ColorPicker
description: A SwiftUI ColorPicker component for selecting colors.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI ColorPicker matches the official SwiftUI [ColorPicker API](https://developer.apple.com/documentation/swiftui/colorpicker) and allows app users to select colors from a palette.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/colorpicker/ios-light.webp"
  darkSrc="/static/images/expo-ui/colorpicker/ios-dark.webp"
  alt="ColorPicker row inside a Form, showing the current color swatch"
/>

## Installation

<APIInstallSection />

## Usage

### Basic color picker

<ComponentExample
  title="ColorPickerExample.tsx"
  src="/static/images/expo-ui/examples/colorpicker-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/colorpicker-basic-ios-dark.webp"
  alt="The system color picker sheet open on the Grid tab, with opacity at 100 percent">

```tsx
import { useState } from 'react';
import { Host, ColorPicker } from '@expo/ui/swift-ui';

export default function ColorPickerExample() {
  const [color, setColor] = useState('#FF6347');

  // A color picker fills the width it is given, so `matchContents` collapses it.
  return (
    <Host style={{ flex: 1 }}>
      <ColorPicker
        label="Select a color"
        selection={color}
        onSelectionChange={setColor}
      />
    </Host>
  );
}
```

</ComponentExample>

### Color picker with opacity support

Use the `supportsOpacity` prop to allow users to select colors with alpha transparency.

<ComponentExample
  title="ColorPickerOpacityExample.tsx"
  src="/static/images/expo-ui/examples/colorpicker-opacity-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/colorpicker-opacity-ios-dark.webp"
  alt="The system color picker sheet open on the Grid tab, with opacity at 50 percent">

```tsx
import { useState } from 'react';
import { Host, ColorPicker } from '@expo/ui/swift-ui';

export default function ColorPickerOpacityExample() {
  const [color, setColor] = useState('#FF634780');

  return (
    <Host style={{ flex: 1 }}>
      <ColorPicker
        label="Select a color with opacity"
        selection={color}
        onSelectionChange={setColor}
        supportsOpacity
      />
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { ColorPicker } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/colorpicker"
  apiName="ColorPicker"
/>
